--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,11 +211,11 @@ p {
 }
 
 .border-dark-blue {
-    border: 1px solid #2c3252 !important;
+    border: 1px solid #ed1941 !important;
 }
 
 .border-orange {
-    border: 1px solid #F37021 !important;
+    border: 1px solid #ed1941 !important;
 }
 
 .border-light-blue {
@@ -243,11 +243,7 @@ p {
 }
 
 .background-orange {
-    background-color: #F37021 !important;
-}
-
-.background-orange {
-    background-color: #F37021;
+    background-color: #ed1941 !important;
 }
 
 .background-red {
@@ -255,11 +251,11 @@ p {
 }
 
 .background-yellow-light {
-    background-color: #FFFBF1 !important;
+    background-color: #fff !important;
 }
 
 .background-dark-blue {
-    background-color: #2c3252 !important;
+    background-color: #ed1941 !important;
 }
 
 .background-orange-light {
@@ -279,7 +275,7 @@ p {
 }
 
 .text-orange {
-    color: #F37021 !important;
+    color: #ed1941 !important;
 }
 
 .text-green {
@@ -443,8 +439,8 @@ p {
 }
 
 .custom-radio:checked{
-    background-color: #2c3252 !important;
-    border-color: #2c3252 !important;
+    background-color: #ed1941 !important;
+    border-color: #ed1941 !important;
 }
 
 input[type="radio"] {
@@ -475,18 +471,23 @@ input[type="radio"] {
 }
 
 .active {
-    border-bottom: 2px solid #f37021 !important;
+    border-bottom: 2px solid #ed1941 !important;
     animation: scale 0.3s ease-in-out;
 }
 
 .btn-outline-dark-blue {
-    border: 1px solid #2c3252 !important;
-    color: #2c3252 !important;
+    border: 1px solid #ed1941 !important;
+    color: #ed1941 !important;
+}
+
+.btn-outline-gray {
+    border: 1px  solid #d1d1d1 !important;
+    color: #000000!important;
 }
 
 .active-outline {
-    background-color: #2c3252 !important;
-    border-color: 1px solid #2c3252 !important;
+    background-color: #ed1941 !important;
+    border-color: 1px solid #ed1941 !important;
     color: #fff !important;
     transition: all 0.3s ease-in-out;
 }
